# MrTrader

./: .gitignore  CMakeLists.txt  LICENSE  README  REQUIRED_PACKAGES  RebuildAll.sh  SeedList.info  WipeClean.sh
WordNet/dict/: Makefile
WordNet/doc/: Makefile
WordNet/doc/html/: Makefile
WordNet/doc/man/: Makefile
WordNet/doc/pdf/: Makefile
WordNet/doc/ps/: Makefile
WordNet/include/: Makefile
WordNet/include/tk/: Makefile
include/: CurlManager.h  NewsFinder.h
src/: CMakeLists.txt  CurlManager.cpp  NewsFinder.cpp  test.cpp
src_deps/: README
